Update funktion.py, 1.tex, and 9 more files...

--- a/CSB/incl/main/1.tex
+++ b/CSB/incl/main/1.tex
@@ -3,6 +3,11 @@
 \begin{color}{AAUblue2}
 %
 Denne delopgave giver en grundlæggende forståelse for kvadraturregler.
+Givet et kabel ophængt i to pæle af samme højde vil under påvirkning af tyngdekraften antage en form, der kan beskrives ved en kurve, som på dansk kaldes en kædelinje, der tager formen 
+\begin{align*}
+f(x)=h_0 + \lambda \text{cosh} \left( \frac{x}{\lambda} \right).
+\end{align*}
+Kablets massetæthed betegnes med $\rho$ og spændingen i kablet i dets laveste punkt med $T$, så $\lambda = \frac{T}{\rho}$. Afstanden som kablet synker i midten, betegnes $s$.
 % 
 \end{color}
 \input{incl/main/11}
