--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -1,12 +1,19 @@
 \section*{1. Graf for funktion}
-\textbf{Opgavebeskrivelse:}
+% 
+%
 \begin{color}{AAUblue2}
 %
-Tegn grafen for funktionen $f(x)$ fra (1) for forskellige valg af parametrene $h_0$ og $\lambda$.
+Tegn grafen for funktionen $f(x)$ fra 
+\begin{align*}
+f(x) = h_0 + \lambda \text{cosh} \left( \frac{x}{\lambda} \right).
+\end{align*} 
+%
+for forskellige valg af parametrene $h_0$ og $\lambda$.
 Forsøg at forklare hvilken effekt parametrene har på kurvens form.
 % 
 \end{color}
 \\\\
+% 
 %
 Kode implementeringen finde i appendix \ref{app:1.1}.
 % 
