--- a/CSB/incl/main/12.tex
+++ b/CSB/incl/main/12.tex
@@ -1,6 +1,21 @@
 \section*{2. Formler}
-% Noget introducernde tekst?
-% Mangler det første ikke?
+% 
+\begin{color}{AAUblue2}
+%
+Vis, at følgende gælder:
+\begin{align*}
+f \left( \frac{L}{2} \right) = h_0 + \lambda \text{cosh} \left( \frac{L}{2 \lambda} \right) = h, \\
+f(0) = h_0 + \lambda = h - s.
+\end{align*}
+Vis, at disse formler giver ligningen 
+\begin{align*}
+\lambda \text{cosh} \left( \frac{L}{2 \lambda} \right) = \lambda + s.
+\end{align*}
+%
+\end{color}
+\\
+% 
+%
 Da søjlerne er placeret i $x = \pm \frac{L}{2}$ og søjlerne har højden $h$ gælder følgende
 \begin{align}
 f\left(\frac{L}{2}\right)	= h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) = h
