--- a/CSB/incl/main/13.tex
+++ b/CSB/incl/main/13.tex
@@ -1,6 +1,14 @@
 \section*{3. Nulpunktbestemmelse}
-% Gennemgå bisektionsmetoden, Newtons metode og sekantmetoden til bestemmelse af nulpunkt af en funktion. 
-% Gennemgå iterationsmetoden til bestemmelse af x-punkt for en funktion.
+%
+\begin{color}{AAUblue2}
+%
+Gennemgå bisektionsmetoden, Newtons metode og sekantmetoden til bestemmelse af nulpunkt af en funktion. 
+Gennemgå iterationsmetoden til at bestemmelse af fixpunkt for en funktion.
+%
+\end{color}
+%
+\\\\ 
+%
 %
 Følgende metoder bestemmer nulpunktet for en funktion $f$.
 For $f:I\rightarrow\R$ kontinuert og $f(a)f(b)<0$, hvor $I=[a,b]$, er der jævnfør mellemværdi-sætningen mindst en løsning til $f(s)=0$.
