--- a/CSB/incl/main/14.tex
+++ b/CSB/incl/main/14.tex
@@ -1,4 +1,9 @@
 \section*{4. Konkret eksempel}
+%
+\begin{color}{AAUblue2}
+Konkret eksempel, hvor $L=150$ og $s=15$.
+\end{color}
+%
 % 
 \input{incl/main/14a}
 \input{incl/main/14b}
