--- a/CSB/incl/main/14a.tex
+++ b/CSB/incl/main/14a.tex
@@ -1,4 +1,16 @@
 \subsection*{(a) Newtons metode og bisektionsmetoden}
+% 
+%
+\begin{color}{AAUblue2}
+Bestem en nummerisk approksimation til værdien af $\lambda$ ud fra 
+\begin{align*}
+\lambda \text{cosh}\left( \frac{75}{\lambda} \right) = \lambda + 15,
+\end{align*}
+ved både bisektionsmetoden og ved Newtons metode. 
+Argument ud fra teorien i Turner for anvendelsen af disse to metoder.
+\end{color}
+\\\\
+%
 %
 Både Newtons metode og bisektionsmetoden er metoder til numerisk bestemmelse af nulpunkter.
 Derfor omskrives ligning (bingbong) til
