--- a/CSB/incl/main/14b.tex
+++ b/CSB/incl/main/14b.tex
@@ -1,5 +1,11 @@
 \subsection*{(b) Sekantmetoden}
-%Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
+%
+\begin{color}{AAUblue2}
+Skriv et Python script der implementerer sekantmetoden. 
+Sammenlig sekantmetoden med Newtons metode.
+\end{color}
+\\\\
+%
 %
 Forskellen mellem Sekantmetoden og Newtons metode er at Newtons metode bruger den afledede i et punkt, hvorimod Sekantmetoden bruger sekanten mellem to punkter. \\
 I sammenligning med eksemplet på en tolerance $1\cdot10^{-12}$, ses forskellen i på 2 iterationer. 
