--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -1,5 +1,21 @@
 \subsection*{(c) Integrationsmetoden}
-% Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.
+%
+\begin{color}{AAUblue2}
+Ligningen 
+\begin{align*}
+\lambda \text{cosh}\left( \frac{75}{\lambda} \right) = \lambda + 15,
+\end{align*}
+kan opskrives til en fixpunktsligning. 
+Gør rede for de to omskrivninger 
+\begin{align*}
+\lambda & = \frac{ \lambda + 15}{ \text{cosh} \left( \frac{75}{\lambda} \right) } \\
+\lambda & = \text{cosh} \left( \frac{75}{\lambda} \right) -15.
+\end{align*}
+Undersøg anvendeligheden af disse ligninger til bestemmelse af $\lambda$ på to forskellige måder. Herunder lav computereksperimenter, og skriv de nødvendige Python script. 
+Derudover brug Sætning 13 i Turner til teoretiske overvejelser.  
+\end{color}
+\\\\
+%
 Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
 $$
 \begin{array}{rlcrl}
