--- a/CSB/incl/main/14d.tex
+++ b/CSB/incl/main/14d.tex
@@ -1,7 +1,15 @@
 \subsection*{(d) Sammenligning}
-% 
-%Sammenlig de forskellige metoder til bestemmelse af \lambda ud fra ligning (6). 
-% Sammenligningen skal omfatte både de konkrete tal og konvergenshastighed af metoderne.
+%
+\begin{color}{AAUblue2}
+Sammenlig de forskellige metoder til bestemmelse af $\lambda$ ud fra 
+\begin{align*}
+\lambda \text{cosh} \left( \frac{75}{\lambda} \right) = \lambda + 15.
+\end{align*}
+Sammenligningen skal omfatte både de konkrete tal og konvergenshastighed af metoderne.
+\end{color}
+\\\\
+%
+%
 For at give et bedre sammenligningsgrundlag er alle metoderne kørt med tolerancen $1\cdot10^{-12}$.
 Dette betyder, at alle metoderne finder frem til grundlæggende samme resultat og at antallet af iterationer er det interessante.
 %
