--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -25,7 +25,7 @@
 	
 	\draw [->,thick, draw=black] (2,1) -- (6.5,1);
 
-	 \draw [->, thick, draw=red] ([xshift=5pt, yshift=-1pt]v1.north) -- ([xshift=-5pt, yshift=1pt]v3.south);
+	 \draw [->, thick, draw=black] ([xshift=5pt, yshift=-1pt]v1.north) -- ([xshift=-5pt, yshift=1pt]v3.south);
      \draw [->, thick, draw=black] ([xshift=5pt, yshift=1pt]v2.south) -- ([xshift=-5pt, yshift=-1pt]v3.north);
 
 
@@ -34,7 +34,7 @@
 	\draw[black, fill=black] (5.6,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
-  \caption{En funktion fra $\S_1$ til $\S_2$, hvor $f(\textbf{v})=\textbf{w}$ og f$(\textbf{u})=\textbf{w}$. }
+  \caption{En funktion $f$ fra $\S_1$ til $\S_2$, hvor $f(\textbf{v})=\textbf{w}$ og f$(\textbf{u})=\textbf{w}$. }
   \label{fig:afbild}
 \end{figure}
 %
