--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -1,6 +1,6 @@
-\chapter{Lineær optimeringsproblemer}
+\chapter{Lineære optimeringsproblemer}
 %
-Lineære programmering er en problemstilling, hvor det ønskes at optimere et problem bestående af en lineær funktion og \textit{lineære betingelser}.
+Lineær programmering er en problemstilling, hvor det ønskes at optimere et problem bestående af en lineær funktion og \textit{lineære betingelser}.
 Funktionen, som optimeres, kaldes \textit{objektfunktionen}.
 Objektfunktionen kan enten optimeres for maksimum eller minimum og er begrænset af de lineære betingelser.
 Findes et maksimum eller minimum inden for begrænsningerne, kaldes dette for problemets \textit{optimale værdi}.
