--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -1,35 +1,48 @@
-\begin{defn}{}{}
-En funktion $f:\R^n \rightarrow \R^m$ siges at være \textbf{surjektiv}, hvis dens værdimængde er hele $\R^m$, tilsvarende at alle vektorer i $\R^m$ er en afbildning af mindst én vektor i $\R^n$.\\
-Funktionen siges at være \textbf{injektiv}, hvis hver entydig vektor i $\R^n$ har en entydig vektor i $\R^m$, som afbildning.\\
-Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijektiv}.
-\end{defn}
 %
 % EKSEMPEL! tilføjes 
 %
 \subsection{Invertibilitet af funktioner}
 %
-Bemærk, at notationen for \textit{inverse funktioner} $f^{-1}$ ikke skal forstås som $\dfrac{1}{f}$, men blot notation, der betegner den inverse funktion af $f$.
+En to tresko - indlednende tekst.
+%
+\begin{defn}{}{}
+En funktion $f:\R^n \rightarrow \R^m$ siges at være \textbf{surjektiv}, hvis dens værdimængde er hele $\R^m$, tilsvarende at alle vektorer i $\R^m$ er en afbildning af mindst én vektor i $\R^n$.
+Funktionen siges at være \textbf{injektiv}, hvis hver entydig vektor i $\R^n$ har en entydig vektor i $\R^m$, som afbildning.
+Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijektiv}.
+\end{defn}
+\noindent
+%
+Bemærk, at
+$$f^{-1} \neq \frac{1}{f},$$
+men blot notation for den \textit{inverse funktion} til $f$.
 Givet en funktion $T:\R^n \rightarrow \R^n$, som er en lineær afbildning med standardmatricen $A$, så er $T$ invertibel, hvis og kun hvis $A$ er invertibel. 
 Lad A være en $n \times n$ invertibel matrix. 
 Så haves for alle $\textbf{v}$, at
-$$T_AT_{A^-1}(\textbf{v})=T_A(T_{A^-1}(\textbf{v}))=T_A(A^{-1}\textbf{v})=A(A^{-1}\textbf{v})=AA^{-1}\textbf{v}=I_n\textbf{v}=\textbf{v}.$$ Dertil er
-$$T_{A^-1}T_A(\textbf{v})=\textbf{v}.$$
+$$T_AT_{A^{-1}}(\textbf{v})=T_A(T_{A^{-1}}(\textbf{v}))=T_A(A^{-1}\textbf{v})=A(A^{-1}\textbf{v})=AA^{-1}\textbf{v}=I_n\textbf{v}=\textbf{v}.$$
+Det kan gennem lignende operationer vises, at
+$$T_{A^{-1}}T_A(\textbf{v})=\textbf{v}.$$
 %
 Dette medfører $T^{-1}=T_{A^{-1}}$. 
-Som følge deraf er $T^{-1}$ linear og dens standard matrix er $A^{-1}$.
+Som følge deraf er $T^{-1}$ lineær og dens standardmatrix er $A^{-1}$.
 \\
 %
 \begin{eks}
-Givet matricen 
+Fra \ref{eks:fisk5} haves, at
 \begin{equation*}
 A=
 \begin{bmatrix}
 1 & 1 & 1\\
 1 & 2 & 2\\
 1 & 3 & 2
+\end{bmatrix} \text{\phantom{jd}og\phantom{jd}}
+A^{-1}=
+\begin{bmatrix}
+2 & -1 & 0 \\
+0 & -1 & 1 \\
+-1 & 2 & -1 \\
 \end{bmatrix}
 \end{equation*}  
-fra \ref{eks:fisk5}, sådan at:
+så er
 \begin{equation*}
 T_A
 \left(
@@ -48,9 +61,9 @@ x_1+3x_2+2x_3\\
 \end{block}
 \end{blockarray}.
 \end{equation*}
-Er den inverse funktion:
+Og den inverse funktion er
 \begin{equation*}
-T_{A}^{-1}\left(
+T_{A^{-1}}\left(
 \begin{bmatrix}
 x_1\\
 x_2\\
@@ -59,7 +72,7 @@ x_3
 \right)=
 \begin{blockarray}{c}
 \begin{block}{[c]}
-2x_1+-1x_2\\
+2x_1-1x_2\\
 -x_2+x_3\\
 -x_1+2x_2-x_3\\
 \end{block}
