--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -19,26 +19,27 @@ Såfremt en matrix $A$ er invertibel, findes der en entydig matrix $B$, som er d
 \end{thm}
 %
 \begin{proof}
-Antag at der findes to matricer  $B$ og $C$, som begge har størelsen $n \times n$, hvorom det gælder, at disse er inverse til $n \times n$ matricen $A$.
+Antag, at der findes to $n \times n$ matricer  $B$ og $C$, der er inverse til $n \times n$ matricen $A$.
 Det gælder derfor fra \ref{defn:mxinvers}, at $A$ er inversen til $B$ og $C$.
 Derfor haves at $AB=BA=I_{n}$, samt at $AC=CA=I_{n}$. 
-Fra \ref{thm:mxmulti} haves derfor at:
+Fra \ref{thm:mxmulti} haves derfor, at
 \begin{align*}
 B=BI_n&=B(AC) \\
 &=(BA)C \\
-&=I_nC=C
+&=I_nC=C.
 \end{align*} 
-Altså er $B=C$ og $A$'s invers er derfor entydig, denne kaldes $A^{-1}$.
+Dermed er $B=C$ og $A$'s invers er derfor entydig.
 \end{proof} \\
 %
+Da inversen er entydig, vil denne kaldes $A^{-1}$.
 Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har den entydige løsning $A^{-1}\mathbf{b}$.
-Inverse matricer har en række egenskaber, hvoraf nogle centrale er formuleret i \ref{thm:mxinvers}. 
+Inverse matricer har en række egenskaber, som er formuleret i \ref{thm:mxinvers}. 
 %
 \begin{thm}{}{mxinvers}
-Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
+Givet to $m \times n$ matricer $A$ og $B$, så gælder, at:
 \begin{enumerate}[label=(\alph*)]
 \item Hvis $A$ er invertibel, så er $A^{-1}$ invertibel, og $(A^{-1})^{-1}=A$.
-\item Hvis $A$ og $B$ er invertible, så er $AB$ invertibel, og $(AB)^{-1}=A^{-1}B^{-1}$.
+\item Hvis $A$ og $B$ er invertible, så er $AB$ invertibel, og $(AB)^{-1}=B^{-1}A^{-1}$.
 \item Hvis $A$ er invertibel, så er $A^T$ invertibel, og $(A^T)^{-1}=(A^{-1})^T$.
 \end{enumerate}
 \end{thm}
@@ -46,27 +47,29 @@ Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
 %
 \begin{proof}
 \begin{enumerate}[label=(\alph*)]
-\item Udsagnet følger af \ref{defn:mxinvers}. 
+\item Udsagnet følger direkte af \ref{defn:mxinvers}. 
 %
-\item Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
-Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
+\item Antag, at $A$ og $B$ er invertible matricer, så er
+$$(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n.$$ 
+Det kan gennem lignende operationer vises, at $(B^{-1}A^{-1})(AB)=I_n$.
 Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$.
-Dermed er $AB^{-1}=A^{-1}B^{-1}$.
+Dermed er $(AB)^{-1}=B^{-1}A^{-1}$.
 %
-\item Antag at A er invertibel. 
-Det følger fra \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
+\item Antag, at $A$ er invertibel. 
+Det følger af \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
 Jævnfør \ref{thm:mxmulti}(g) følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
-Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
+Derfor er $A^T$ en invertibel matrix med inversen $(A^{-1})^T$ og $(A^T)^{-1}=(A^{-1})^T$.
 \end{enumerate}
 \end{proof}\\
 %
 %NOGET OM ELEMENTÆRE MATRICER OG INVERTIBILITET
 %
-Enhver rækkeoperation kan udføres ved hjælp af matrixmultiplikation.
+Som tidligere nævnt, kan enhver rækkeoperation udføres ved hjælp af matrixmultiplikation.
+%
 \begin{thm}{}{eleinv}
-Lad $A$ være en $m \times n$ matrix, og $R$ den reducerede trappeform af $A$. 
-Så eksisterer der en invertibel $m \times m$ matrix $P=E_kE_{k-1} \cdots E_1$, så $PA=R$.
+Lad $A$ være en $m \times n$ matrix, og $A_R$ den reducerede trappeform af $A$. 
+Så eksisterer der en invertibel $m \times m$ matrix $P=E_kE_{k-1} \cdots E_1$, så $PA=A_R$.
 \end{thm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% HER
 \begin{proof}
@@ -87,10 +90,11 @@ Så eksisterer der en invertibel $m \times m$ matrix $P=E_kE_{k-1} \cdots E_1$, 
 %c
 %\end{bmatrix}
 %$$
-Lad $A$ være en $m \times n$ matrix og $P$ være et $m \times m$ produkt af de elementære matricer som skal til for at omdanne en matrix til reduceret rækkeform, $E_kE_{k-1} \cdots E_1$. 
-$P$ er dermed invertibel da enhver elemenetær matrix er invertibel og produktet af to invertible matricer også er invertibel. 
-Det vides at gauss elimination omdanner en matrix til reduceret trappeform, ved hjælp af elementære rækkeoperationer, så for hver af de operationer, findes der en tilsvarende elementær matrice.
-
+Lad $A$ være en $m \times n$ matrix og $P$ være et $m \times m$ produkt af de elementære matricer, som skal til for at omdanne $A$ til reduceret rækkeform, $E_kE_{k-1} \cdots E_1$. 
+$P$ er dermed invertibel, da enhver elemenetær matrix er invertibel og produktet af to invertible matricer også er invertibel. 
+Det vides, at Gauss-elimination omdanner en matrix til reduceret trappeform ved hjælp af elementære rækkeoperationer.
+Så for hver af de operationer findes der en tilsvarende elementær matrix.
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% hjælp
 \end{proof}
 %
@@ -98,57 +102,53 @@ Det vides at gauss elimination omdanner en matrix til reduceret trappeform, ved 
 \ref{thm:eleinv} medfører desuden \ref{kor:eleinv}.
 %måske noget mere her (at det er vigtigt for rækkeoperationer?).  
 \begin{kor}{}{eleinv}
-Matrixligningerne $A\textbf{x}=\textbf{b}$ og $R\textbf{x}=\textbf{c}$ har samme løsninger, hvor 
-$[R \text{   }| \textbf{c}]$
+Matrixligningerne $A\textbf{x}=\textbf{b}$ og $A_R\textbf{x}=\textbf{c}$ har samme løsninger, hvor 
+$[A_R \mid \textbf{c}]$
 er den reducerede trappeform af den udvidede matrix 
-$[A \text{   }| \textbf{b}].
-$
+$[A \mid\textbf{b}].$
 \end{kor}\noindent
 %
-%\begin{proof}
-%Lad $P$ være en invertibel matrix, så 
-%$P[A \text{   }| \textbf{b}]
-%=
-%[R \text{   }| \textbf{c}]
-%$.
-%Så gælder det, at 
-%$$
-%P
-%\begin{bmatrix}
-%A & \textbf{b}
-%\end{bmatrix}
-%=
-%\begin{bmatrix}
-%PA & P\textbf{b}
-%\end{bmatrix}
-%=
-%\begin{bmatrix}
-%R & \textbf{c}
-%\end{bmatrix}
-%\text{, }
-%$$
-%hvormed $PA=R$ og $P\textbf{b}=\textbf{c}$.
-%Heraf følger, at $A=P^{-1}R$ og $\textbf{b}=P^{-1}\textbf{c}$, da $P$ er invertibel. 
-%\\\\
-%Antag, at $\textbf{v}$ er en løsning til $A\textbf{x}=\textbf{b}$. Så er
-%$$
-%R\textbf{v}=(PA)\textbf{v}=P(A\textbf{v})=P\textbf{b}=\textbf{c},
-%$$
-%hvormed $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. 
-%Antag nu i stedet, at $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. Så er
-%$$
-%A\textbf{v}=(P^{-1}R)\textbf{v}=P^{-1}(R\textbf{v})=P^{-1}\textbf{c}=\textbf{b},
-%$$
-%hvormed $\textbf{v}$ er en løsning til $A\textbf{x}=b$. 
-%Dermed er det bevist, at $A\textbf{x}=b$ og $R\textbf{x}=c$ har samme løsning.
-%%Beviset for korollar \ref{kor:eleinv} følger af beviset for sætning \ref{thm:eleinv} med tilføjelsen, at hvis $\textbf{b}=\textbf{0}$, så er $\textbf{c}=\textbf{0}$, hvilket resulterer i nulvektoren i begge udtryk.
-%\end{proof}
-%\\
+\begin{proof}
+Lad $P$ være en invertibel matrix, så 
+$P[A \mid\textbf{b}]
+=
+[A_R \mid \textbf{c}]
+$.
+Så gælder det, at 
+$$
+P
+\begin{bmatrix}
+A & \textbf{b}
+\end{bmatrix}
+=
+\begin{bmatrix}
+PA & P\textbf{b}
+\end{bmatrix}
+=
+\begin{bmatrix}
+A_R & \textbf{c}
+\end{bmatrix},
+$$
+hvormed $PA=A_R$ og $P\textbf{b}=\textbf{c}$.
+Heraf følger, at $A=P^{-1}A_R$ og $\textbf{b}=P^{-1}\textbf{c}$, da $P$ er invertibel. 
+\\\\
+Antag, at $\textbf{v}$ er en løsning til $A\textbf{x}=\textbf{b}$. Så er
+$$
+R\textbf{v}=(PA)\textbf{v}=P(A\textbf{v})=P\textbf{b}=\textbf{c},
+$$
+hvormed $\textbf{v}$ er en løsning til $A_R\textbf{x}=\textbf{c}$. 
+Antag nu i stedet, at $\textbf{v}$ er en løsning til $A_R\textbf{x}=\textbf{c}$. Så er
+$$
+A\textbf{v}=(P^{-1}A_R)\textbf{v}=P^{-1}(A_R\textbf{v})=P^{-1}\textbf{c}=\textbf{b},
+$$
+hvormed $\textbf{v}$ er en løsning til $A\textbf{x}=\textbf{b}$. 
+Dermed er det bevist, at $A\textbf{x}=\textbf{b}$ og $A_R\textbf{x}=\textbf{c}$ har samme løsning.
+
+\end{proof}
+\\
+Beviset for \ref{kor:eleinv} følger af beviset for \ref{thm:eleinv} med tilføjelsen, at hvis $\textbf{b}=\textbf{0}$, så er $\textbf{c}=\textbf{0}$, hvilket resulterer i nulvektoren i begge udtryk.\\\\
 %
-%
-%HER SAD DEF 3.8 FØR
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Det er dog ikke altid, der findes en matrix $B$, så kriterierne i \ref{defn:mxinvers} opfyldes. 
+\ref{thm:mxinvertibel}  en tilstrækkelig og nødvendig betingelse for, at $A$ er invertibel.
 %
 \begin{thm}{}{mxinvertibel}
 Lad $A$ være en $n \times n$ matrix. 
@@ -156,14 +156,14 @@ $A$ er invertibel, hvis og kun hvis den reducerede trappeform af $A$ er $I_n$.
 \end{thm}
 %
 \begin{proof}
-Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{u} i $\R^n$, så $A\textbf{v}=\textbf{0}$. 
-Da $A$ er en invertibel matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har løsningen $A^{-1}\mathbf{b}$ og derfor er $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$. 
+Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor $\textbf{u}$ i $\R^n$, så $A\textbf{u}=\textbf{0}$. 
+Da $A$ er en invertibel matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har løsningen $A^{-1}\mathbf{b}$ og derfor er $\textbf{u}=A^{-1}\textbf{0}=\textbf{0}$. 
 Den eneste løsning til problemet er derfor $\textbf{0}$. 
-Såfremt $A$ er invertibel, følger det derfor fra \ref{thm:mxlinuaf}, at $\text{ rang}(A)=n$.
+Såfremt $A$ er invertibel, følger det derfor fra \ref{thm:mxlinuaf}, at $\text{rang}(A)=n$.
 Det følger derfor, at $A$ på reduceret trappeform er $I_n$.
 \\\\
-Antag nu, at den reducerede trappeform af $A$=$I_n$. 
-Jævnfør \ref{thm:mxinvertibel} eksister der en invertibel $n \times n$ matrix $P$, hvorom det gælder, at $PA=I_n$. 
+Antag nu, at den reducerede trappeform af $A=I_n$. 
+Jævnfør \ref{thm:eleinv} eksisterer der en invertibel $n \times n$ matrix $P$, hvorom det gælder, at $PA=I_n$. 
 %
 \begin{align*}
 A=I_nA=(P^{-1}P)A=P^{-1}(PA)=P^{-1}.
@@ -176,12 +176,12 @@ Fra \ref{thm:mxinvers} fremgår det, at $P^{-1}$ er en invertibel matrix, og det
 \\
 Det er fordelagtigt at benytte algoritmer til at invertere matricer.
 Jævnfør \ref{defn:mxinvers} opfylder en $n \times n$ matrices inverse matrix $AA^{-1}=I_n$.
-Med dette kan ligningen $A[\textbf{x}_1\text{  }\textbf{x}_2\text{  }\ldots\text{  }\textbf{x}_n ] = [\textbf{e}_1\text{  }\textbf{e}_2\text{  }\ldots\text{  }\textbf{e}_n ]$ opstilles.
+Med dette kan ligningen $A[\textbf{x}_1\text{  }\textbf{x}_2\text{  }\ldots\text{  }\textbf{x}_n ] = [\textbf{e}_1\text{  }\textbf{e}_2\text{  }\ldots\text{  }\textbf{e}_n]$ opstilles.
 Da den inverse matrix er entydig kan søjlerne findes ved at løse $A\textbf{x}_i = \textbf{e}_i$.
-Det gøres ved Gauss-elimination på $[A\textbf{ }|\textbf{ }\textbf{e}_i]$.
+Det gøres ved Gauss-elimination på $[A \mid \textbf{e}_i]$.
 Kombinationen af rækkeoperationer for at få $A$ på reduceret trappeform er kun afhængig af $A$.
 Dette betyder, at hver ligning løses med samme rækkeoperationer og alle søjler kan findes samtidigt.
-Dette gøres med Gauss-elimination på $[A\textbf{ }|\textbf{ }I_n]$, hvor resultatet bliver $[I_n\textbf{ }|\textbf{ }A^{-1}]$, hvis $A$ er invertibel.\\
+Dette gøres med Gauss-elimination på $[A \mid I_n]$, hvor resultatet bliver $[I_n \mid A^{-1}]$, hvis $A$ er invertibel.\\
 %
 %Lad $A$ være en $n \times n$ matrix. 
 %Givet et input $[A \text{   } I_n]$ skal algoritmen udføre elementære rækkeoperationer på $A$, således algoritmens output bliver $[R \text{   } B]$, hvor $R$ er $A$ på reduceret trappeform. 
@@ -203,7 +203,7 @@ A=\begin{blockarray}{ccc}
 %
 For at finde dennes invers $A^{-1}$ opstilles totalmatricen 
 \begin{align*}
-[A \text{   } | \text{ } I_3] =\begin{blockarray}{cccccc}
+[A \mid I_3] =\begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
 1 & 1 & 1 & 1 & 0 & 0 \\
 1 & 2 & 2 & 0 & 1 & 0 \\
@@ -270,9 +270,10 @@ Ved at udføre rækkeoperationer omdannes $A$ til reduceret trappeform.
 \end{block}
 \end{blockarray}.
 \end{align*}
-Det fremgår derfor, at $A$ er invertibel, da dens reducerede trappeform er $I_3$. $B$-siden, hvor $I_3$ før var, er nu
+Det fremgår derfor, at $A$ er invertibel, da dens reducerede trappeform er $I_3$.
+Inversen kan nu aflæses til
 \begin{align*}
-B=A^{-1}=\begin{blockarray}{ccc}
+A^{-1}=\begin{blockarray}{ccc}
 \begin{block}{[ccc]}
 2 & -1 & 0 \\
 0 & -1 & 1 \\
@@ -283,7 +284,7 @@ B=A^{-1}=\begin{blockarray}{ccc}
 %
 \end{eks}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\ref{thm:mxinvers2} beskriver nogle yderligere egenskaber for invertible matricer. 
+\ref{thm:mxinvers2} beskriver yderligere egenskaber for invertible matricer. 
 %
 \begin{thm}{}{mxinvers2}
 %Givet to $m \times n$ matricer $A$ og $B$, så gælder, at (det er bare leftover aye?)
@@ -293,8 +294,8 @@ Da er følgende udsagn ækvivalente.
 \item $A$ er invertibel.
 \item Den reducerede trappeform af $A$ er $I_n$.
 \item $\text{rang}(A)=n$.
-\item Spannet af søjlerne i $A$ er $R^n$.
-\item Ligningssystemet $A\textbf{x}=\textbf{b}$ er konsistent for alle $\textbf{b}$ i $R^n$.
+\item Spannet af søjlerne i $A$ er $\R^n$.
+\item Ligningssystemet $A\textbf{x}=\textbf{b}$ er konsistent for alle $\textbf{b} \in \R^n$.
 \item $\text{null}(A)=0$.
 \item Søjlerne i $A$ er lineært uafhængige.
 \item Den eneste løsning for $A\textbf{x}=\textbf{0}$ er $\textbf{0}$.
@@ -307,7 +308,7 @@ Da er følgende udsagn ækvivalente.
 \begin{proof}
 Lad $A$ være en $n \times n$ matrix.
 Jævnfør \ref{thm:mxinvertibel} er (a) og (b) ækvivalente. 
-Da $A$ er kvadratisk, er (b) ligeledes ækvivalent med (c), (d) og (e) jævnfør \ref{thm:spaneqv}. 
+Da $A$ er kvadratisk, er (b) jævnfør \ref{thm:spaneqv} ligeledes ækvivalent med (c), (d) og (e). 
 Jævnfør \ref{thm:mxlinuaf} er (b) desuden ækvivalent med (f), (g) og (h). 
 Eftersom (a) er ækvivalent med (b), er (a) også ækvivalent med (c), (d), (e), (f), (g) og (h). 
 \\\\
@@ -318,19 +319,19 @@ Da $P=E_kE_{k-1} \cdots E_1$, så er $P^{-1}=E_1^{-1} \cdots E_{k-1}^{-1}E_k^{-1
 $A$ er dermed et produkt af elementære matricer, hvilket beviser, at (a) medfører (k). \\\\
 Antag nu, at $A$ er et produkt af elementære matricer. 
 Elementære matricer er invertible, hvormed $A$ er et produkt af invertible matricer. 
-$A$ er derfor invertibel, hvilket bekræfter (a), hvilket gør (a) og (k) ækvivalente. 
+$A$ er derfor invertibel og (k) medfører dermed (a), hvilket gør (a) og (k) ækvivalente. 
 \\\\
-At (a) medfører (i) er åbenlyst, da $B=A^{1}$. 
-Antag nu, at der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$. Lad $\textbf{v} \in \R^n$, så at $A\textbf{v}=\textbf{b}$. Så gælder det, at 
+At (a) medfører (i) er trivielt, da $B = A^{-1}$. 
+Antag nu, at der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$. Lad $\textbf{v} \in \R^n$ være en vektor således, at $A\textbf{v}=\textbf{0}$. Så gælder det, at 
 $$
 \textbf{v} = I_n\textbf{v} = (BA)\textbf{v} = B(A\textbf{v}) = B\textbf{0} = \textbf{0}.
 $$
-Bemærk, at (i) dermed medfører (h).
+Så haves, at (i) medfører (h).
 Eftersom (h) er ækvivalent med (a), medfører (i) derfor også (a).
 Således er (i) og (a) ækvivalente. 
 \\\\
-At (a) medfører (j) er åbenlyst, da $C=A^{1}$.
-Antag nu, at der eksister en $n \times n$ matrix $C$, så $AC=I_n$. 
+At (a) medfører (j) er trivielt, da $C=A^{-1}$.
+Antag nu, at der eksisterer en $n \times n$ matrix $C$, så $AC=I_n$. 
 Lad $\textbf{b} \in \R^n$ og $\textbf{v}=C\textbf{b}$. 
 Så gælder, at 
 $$
@@ -338,5 +339,5 @@ A\textbf{v} = A(C\textbf{b}) = (AC)\textbf{b} = I_n\textbf{b} = \textbf{b}.
 $$
 Bemærk, at (j) dermed medfører (e).
 Eftersom (e) er ækvivalent med (a), medfører (j) derfor også (a).
-Således er (j) og (a) ækvivalente, og alle punkter i \ref{thm:mxinvers2} er dermed ækvivalente.
+Således er (j) og (a) ækvivalente.
 \end{proof}
