--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -1,23 +1,25 @@
 \section{Underrum}
-Det kan ofte være belejligt at undersøge vektorer i en begrænset del af $\R^n$. Den begrænsede del kaldes et \textit{underum}.
+Det kan være brugbart at undersøge vektorer i en delmængde af $\R^n$.
+Denne delmængde kaldes et \textit{underrum}.
 %
 \begin{defn}{}{underrum}
 En mængde $W$, bestående af vektorer i $\R^n$, er et \textbf{underrum} af $\R^n$, hvis den opfylder følgende betingelser:	
 \begin{enumerate}[label=(\alph*)]
-	\item $\textbf{0}\in W$.
-	\item $\textbf{u}$,$\textbf{v} \in W \rightarrow \textbf{u}+\textbf{v} \in W $.
-	\item $\textbf{u} \in W$ og $c$ er en skalar, så er $\textbf{u}c \in W$.
+\item $\textbf{0}\in W$.
+\item $\textbf{u}$,$\textbf{v} \in W \rightarrow \textbf{u}+\textbf{v} \in W $.
+\item $\textbf{u} \in W$ og $c$ er en skalar, så er $\textbf{u}c \in W$.
 \end{enumerate}
 \end{defn}
 \noindent
 Mængden $\R^n$ er et underrum til sig selv, da summen af to vilkårlige vektorer i $\R^n$ tilhører $\R^n$.
-Enhver vektor multipilciteret med en skalar er i $\R^n$, og $\textbf{0}$ er ligeledes i $\R^n$. 
+Enhver vektor multipliceret med en skalar er i $\R^n$, og $\textbf{0}$ er ligeledes i $\R^n$. 
 Mængden $\{\textbf{0}\}$ er ligeså et underrum til $\R^n$, kaldet \textit{nul-underrummet}.
 %
 %
 \begin{thm}{}{}
-Spannet af en endelig ikke-tom delmængde af $\R^n$ er et underrum af $\R^n$.
+Spannet af en endelig ikke-tom mængde af vektorer i $\R^n$ er et underrum af $\R^n$.
 \end{thm}
+%
 \begin{proof}
 Lad $\S$ være spannet af en endelig ikke-tom mængde 
 $\{\textbf{w}_1 , \textbf{w}_2 , \ldots , \textbf{w}_j\}$.
@@ -45,10 +47,9 @@ hvilket viser, at $\textbf{u}+\textbf{v}\in \S$, hvormed (b) i \ref{defn:underru
 For enhver skalar $h$ gælder, at
 \begin{align*}
 h\textbf{u}&=h(c_1\textbf{w}_1+c_2\textbf{w}_2+\cdots+c_j\textbf{w}_j)\\
-&=(h_1c_1)\textbf{w}_1+(h_2c_2)\textbf{w}_2+\cdots+(h_jc_j)\textbf{w}_j,
+&=(hc_1)\textbf{w}_1+(hc_2)\textbf{w}_2+\cdots+(hc_j)\textbf{w}_j,
 \end{align*}
-og eftersom $h_1c_1,h_2c_2,\ldots,h_jc_j$ er skalarer, så er $h\textbf{u}\in \S$, hvilket opfylder (c) i \ref{defn:underrum}.
-Hermed er det bevist, at spannet af en delmængde af $\R^n$ er et underrum til $\R^n$.
+og eftersom $hc_1, hc_2, \ldots, hc_j$ er skalarer, så er $h\textbf{u}\in \S$, hvilket opfylder \ref{defn:underrum}(c).
 \end{proof}
 
 \subsection{Underrum for matricer}
@@ -59,8 +60,8 @@ Der findes bestemte typer af underrum, som er relevante i forbindelse med matric
 \end{defn}
 %
 \noindent
-Et eksempel på nulrummet til en matrix ses i \ref{nulrum}.
-
+Et eksempel på nulrummet til en matrix ses i \ref{nulrum}.\\
+%
 \begin{eks}
 \label{nulrum}
 Lad 
@@ -84,14 +85,14 @@ Hvis $A$ er en $m\times n$ matrix, så er nulrummet af $A$ et underrum af $\R^n$
 \begin{proof}
 Eftersom $A$ er en $m\times n$ matrix, så er vektorerne i nulrummet i $\R^n$, da det er løsningerne til $A\textbf{x}=\textbf{0}$. $\textbf{0}$ er en del af nulrummet, da $A\textbf{0}=\textbf{0}$. 
 Hvis $\textbf{u}$ og $\textbf{v}$ er i nulrummet, så er $A\textbf{u}=\textbf{0}$ og $A\textbf{v}=\textbf{0}$. 
-Deraf har vi, at
+Deraf haves, at
 %
 $$A(\textbf{u}+\textbf{v})=A\textbf{u}+A\textbf{v}=\textbf{0}+\textbf{0}=\textbf{0}.$$
 %
 Deraf haves, at $\textbf{u}+\textbf{v}$ er i nulrummet. 
 For alle skalarer $c$ haves, at
 $$A(c\textbf{u})=c(A\textbf{u})=c\textbf{0}=\textbf{0}.$$
-Dette viser, at $c\textbf{u}$ er i nulrummet, hvilket viser, at nulrummet af $A$ er et underrum af $\R^n$
+Dette viser, at $c\textbf{u}$ er i nulrummet og dermed er nulrummet til $A$ er et underrum af $\R^n$.
 \end{proof}
 \\
 \noindent
@@ -99,9 +100,9 @@ Andre relevante typer underrum er \textit{rækkerum} og \textit{søjlerum}.
 %
 \begin{defn}{}{}
 %Til nedenstående "Rækkerum er spannet af rækkerne i en matrix" - right? 
-\textbf{Rækkerum} er spannet, som kommer af rækkerne i en matrix, og noteres $\text{ræk}(A)$.
+\textbf{Rækkerum} er spannet, som kommer af rækkerne i en matrix, og noteres $\text{row}(A)$.
 \\
-\textbf{Søjlerum} er spannet af søjlerne i en matrix, og noteres $\text{søj}(A)$.
+\textbf{Søjlerum} er spannet af søjlerne i en matrix, og noteres $\text{col}(A)$.
 \end{defn}
 \noindent
 Underrum med særegne karakteristika er også relevante i forbindelse med lineær afbildning.
@@ -113,30 +114,31 @@ Denne mængde kaldes \textit{basis} for underrummet.
 %
 \begin{defn}{}{basisunderrum}
 Lad $\mathcal{P}$ være et ikke-nul-underrum af $\R^n$. 
-En \textbf{basis} for $\mathcal{P}$ er en lineært uafhængig mængde af generatorer for $\mathcal{P}$.
+En \textbf{basis} for $\mathcal{P}$ er en lineært uafhængig mængde af \textbf{generatorer} for $\mathcal{P}$.
 \end{defn}
 \noindent
 Eksempelvis kan en mængde af standardvektorer $\{\textbf{e}_1,\textbf{e}_2,\ldots,\textbf{e}_n\}$ bruges som basis for $\R^n$.
 Denne type basis kaldes for \textit{standard basis}.
 Der findes dog flere mulige baser for det samme underrum.
-\\\\
 %
-Pivotsøjlerne i en matrix udgør basis for dens søjlerum. Dette følger af bevis \ref{thm:pivotu}.
-\\\\
+Pivotsøjlerne i en matrix udgør basis for dens søjlerum.
+Dette følger af \ref{thm:pivotu} i appendix.
+%
 \begin{thm}{}{}
-Lad $V$ være et ikke nul underrum af $\R^n$. Enhver to baser for $V$ indeholder det samme antal vektorer.
+Lad $V$ være et ikke-nul-underrum af $\R^n$. Enhver to baser for $V$ indeholder det samme antal vektorer.
 \end{thm}
 \begin{proof}
-Antag at $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ og $\{\textbf{v}_1,\textbf{v}_2,\ldots,\textbf{v}_p\} $ er baser for $V$ og lad $A=[\textbf{u}_1 \text{ } \textbf{u}_2 \text{ }  \ldots \text{ } \textbf{u}_k] $ og $B=[\textbf{v}_1 \text{ } \textbf{v}_2 \text{ }  \ldots \text{ } \textbf{v}_k] $.
-Efter som $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ er en mængde af generatorer for $V$, så eksisterer der vektorer $\textbf{c}_i$ i $\R^k$, for $I=1,2,\ldots,p$ sådan at det opfylder $A\textbf{c}_i=\textbf{v}_i$.
+Antag, at $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ og $\{\textbf{v}_1,\textbf{v}_2,\ldots,\textbf{v}_p\} $ er baser for $V$ og lad $A=[\textbf{u}_1 \text{ } \textbf{u}_2 \text{ }  \ldots \text{ } \textbf{u}_k] $ og $B=[\textbf{v}_1 \text{ } \textbf{v}_2 \text{ }  \ldots \text{ } \textbf{v}_k] $.
+Eftersom $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ er en mængde af generatorer for $V$, så eksisterer der vektorer $\textbf{c}_i$ i $\R^k$, for $i=1,2,\ldots,p$, så $A\textbf{c}_i=\textbf{v}_i$.
 Lad $C=[\textbf{c}_1 \text{ } \textbf{c}_2 \text{ } \ldots \text{ } \textbf{c}_p]$.
-$C$ er dermed en $ k \text{ } \times \text{ } p$ matrix, hvorom det gælder at $AC=B$.
-Antag nu er der for nogle vektorer $\textbf{x}$ i $\R^p$ gælder $C\textbf{x}=\textbf{0}$. 
+$C$ er dermed en $ k \times p$ matrix, hvorom det gælder, at $AC=B$.
+Antag nu, at der for nogle vektorer $\textbf{x}$ i $\R^p$ gælder, at $C\textbf{x}=\textbf{0}$. 
 Så er $B\textbf{x}=AC\textbf{x}=\textbf{0}$. 
-Men da søjlerne af $B$ er lineært uafhængige følger det af \ref{thm:mxlinuaf} at $\textbf{x}=\textbf{0}$.
-Af samme sætning haves det så at søjlerne af $C$ er lineært uafhængige vektorer i $\R^k$.
-Da en mængde af vektorer i $\R^k$ med mere en k vektorer er lineært afhængig, haves det at $p\leq k$. 
-Vendes rollerne af baserne om, haves $k \leq p$. 
-Deraf konkluderes der at $k=p$, og dermed at to baser indeholder samme antal vektorer. 
+Men da søjlerne af $B$ er lineært uafhængige, følger det af \ref{thm:mxlinuaf}, at $\textbf{x}=\textbf{0}$.
+Af samme sætning haves det, at søjlerne i $C$ er lineært uafhængige vektorer i $\R^k$.
+Da en mængde af vektorer i $\R^k$ med mere end $k$ vektorer er lineært afhængig, haves det, at $p\leq k$. 
+Ligeledes kan det vises, at $k \leq p$ for $\textbf{c}_i$ i $\R^p$, $i=1,2,\ldots,k$, så $B\textbf{c}_i=\textbf{v}_i$. 
+Deraf konkluderes det, at $k=p$.
+Dermed indeholder de to baser samme antal vektorer. 
 % egenskab (2) for lineært afhængige og uafhængige mængder, se side \pageref{egenskab_lin}.
 \end{proof}
